--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-scrollspy": "^3.4.3",
     "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
